--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,19 @@
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
     <selenium-version>3.9.1</selenium-version>
     <threads>2</threads>
-      <browser>chrome</browser>
+    <browser>chrome</browser>
+    <remote>false</remote>
+    <seleniumGridURL>http://deepu105046:2e2436a9-2f51-490b-9843-d2ff89786211@ondemand.saucelabs.com:80/wd/hub</seleniumGridURL>
+    <platform></platform>
+    <browserVersion></browserVersion>
     <scope>test</scope>
+
   </properties>
 
   <profiles>
@@ -40,6 +47,11 @@
                 <threadCount>${threads}</threadCount>
                 <systemProperties>
                     <browser>${browser}</browser>
+                    <screenshotDirectory>${project.build.directory}/screenshots</screenshotDirectory>
+                    <remoteDriver>${remote}</remoteDriver>
+                    <gridURL>${seleniumGridURL}</gridURL>
+                    <desiredPlatform>${platform}</desiredPlatform>
+                    <desiredBrowserVersion>${browserVersion}</desiredBrowserVersion>
                 </systemProperties>
                 <suiteXmlFiles>
                     <suiteXmlFile>src/test/resources/TestCaseSuits/googleSearchTest.xml</suiteXmlFile>
